@@ -162,6 +162,7 @@ houseCheckInFailed "House check in failed."
 nameSearch "Name Search:"
 filter "Filter"
 ignoreHouse "Ignore House"
+clearIgnoreList "Un-ignore All"
 startRobHouse "Rob House"
 viewBlueprint "View House Blueprint"
 
@@ -175,6 +176,7 @@ robPickListTip "%d tried to rob %s house.  %d died trying"
 replayPickListTip "%s stole $%d after %d tried and %d died"
 
 ignoreTip "Hide house from list until house changes"
+clearIgnoreListTip "Resumes showing all houses, with none ignored"
 
 
 startTileDescription "Welcome Mat"
